<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.transport.vue.FiltreActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="411dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewDepart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depart" />

            <Spinner
                android:id="@+id/spinnerDepart"
                android:layout_width="312dp"
                android:layout_height="48dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewArrivee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrivee" />

            <Spinner
                android:id="@+id/spinnerArrivee"
                android:layout_width="312dp"
                android:layout_height="48dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewPeriode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periode" />

            <Spinner
                android:id="@+id/spinnerPeriode"
                android:layout_width="312dp"
                android:layout_height="48dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewJour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jour" />

            <Spinner
                android:id="@+id/spinnerJour"
                android:layout_width="312dp"
                android:layout_height="48dp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/buttonValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>